calculator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator
  template:
    metadata:
      labels:
        app: calculator
    spec:
      containers:
      - name: calculator
        image: abicaleb/calculator-web-app:v2
        imagePullPolicy: Never  # This tells Kubernetes to use the local image
        ports:
        - containerPort: 5000
