calculator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
spec:
  type: NodePort
  selector:
    app: calculator
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30007
